# unnamedCTF

./: .gitignore  Dockerfile  README.md
uctf/: BUILD.bazel  Cargo.toml  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-uctf
uctf/src/: lib.rs  main.rs
